--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "vue": "^2.2.6",
     "vue-google-autocomplete": "^1.0.7",
+    "vue-material": "^0.7.1",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
