--- a/circle.yml
+++ b/circle.yml
@@ -1,12 +1,9 @@
+dependencies:
+    override:
+        - sudo pip install awscli
 deployment:
-  staging:
+  prod:
     branch: master
-    codedeploy:
-      acm:
-        application_root: /
-        region: eu-ireland
-        revision_location:
-          revision_type: S3
-          s3_location:
-            bucket: appcimo
-            key_pattern: acm-{BRANCH}-{SHORT_COMMIT}
+    commands:
+      - aws s3 sync /home/ubuntu/acm s3://appcimo --delete
+
