--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "test": "npm run unit"
+    "test": "npm run unit",
+    "prebuild": "npm run test"
   },
   "dependencies": {
     "vue": "^2.3.3",
